src/test/Success/test_sym2.c
int i = 2 * 3 + 1 + 4;
int y = 1;

int main(){
    i = 5;
    y = 4;
    i = i + y;
}