src/test/Fail/test_type3.c
int main(){
    char c;
    int x;
    int y = x + c;
}